<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_JointID_Offset" Id="{334d51a5-5a6b-4cad-939e-48597c4a15c8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
//{attribute 'strict'}
TYPE E_JointID_Offset :
(	
	IncrementalEncoder := 1, // ie: R_Arm_ShoulderYawIncrementalEncoder would be 1111 in E_StateSourceID if R_Arm_ShoulderYawJoint was 1120 
	AbsoluteEncoder := 2,
	JointSetup := 3	
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>