<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_JointType" Id="{0a7403d1-c3e4-47e1-a405-8a53cb228f6e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
//{attribute 'strict'}
TYPE E_JointType :
(
	DualEncoderNoOffset := 1,	// One incremental and one absolute encoder
	DualEncoderWithOffset, 		// One incremental and one absolute encoder. Incremental Encoder Position + Offset = Absolute Encoder Position
	SingleIncrementalEncoder,
	SingleAbsoluteEncoder    
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>